--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
@@ -63,20 +63,20 @@
                <p *ngIf="pessoaForm.get('nome')?.errors?.['required'] && isInvalid('nome')" class="mt-1 text-xs text-red-600">O nome é obrigatório.</p>
             </div>
             <div>
-               <label for="cpf" class="block text-sm font-medium text-gray-700">RG<span class="text-red-500"></span></label>
-              <input id="cpf" type="text" formControlName="rg"  inputmode="numeric"  mask="00.000.000-00"  placeholder="00.000.000-00" type="text"
+               <label for="rg" class="block text-sm font-medium text-gray-700">RG</label>
+              <input id="rg" type="text" formControlName="rg"  inputmode="numeric"  mask="00.000.000-00"  placeholder="00.000.000-00" type="text"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
               >
             </div>
              <div>
-              <label for="nome" class="block text-sm font-medium text-gray-700">Orgão Emissor <span class="text-red-500"></span></label>
-              <input id="nome" type="text" formControlName="orgEmis" placeholder="Ex.: SSP - SP"    type="text"
+              <label for="orgEmis" class="block text-sm font-medium text-gray-700">Orgão Emissor <span class="text-red-500"></span></label>
+              <input id="orgEmis" type="text" formControlName="orgEmis" placeholder="Ex.: SSP - SP"    type="text"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
               >
               </div>
               <div>
-              <label for="nome" class="block text-sm font-medium text-gray-700">Data expedição <span class="text-red-500"></span></label>
-              <input id="nome" type="text" formControlName="dtEmis" placeholder="99/99/9999" inputmode="date"
+              <label for="dtEmis" class="block text-sm font-medium text-gray-700">Data expedição <span class="text-red-500"></span></label>
+              <input id="dtEmis" type="text" formControlName="dtEmis" placeholder="99/99/9999" inputmode="date"
                   mask="99/99/9999"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
               >
@@ -99,8 +99,8 @@
               </ng-container>
             </div>
             <div>
-              <label for="contato" class="block text-sm font-medium text-gray-700">Contato empresarial <span class="text-red-500">*</span></label>
-              <input id="contato" type="text" formControlName="contato" placeholder="Contato empresarial"
+              <label for="nmFantasia" class="block text-sm font-medium text-gray-700">Nome Fantasia <span class="text-red-500">*</span></label>
+              <input id="nmFantasia" type="text" formControlName="nmFantasia" placeholder="Nome Fantasia"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
                 [ngClass]="{'border-red-500': isInvalid('razaoSocial'), 'border-gray-300': !isInvalid('razaoSocial')}"
               >
@@ -108,8 +108,8 @@
             </div>
 
             <div class="md:col-span-2">
-              <label for="nomeFantasia" class="block text-sm font-medium text-gray-700">Nome Fantasia <span class="text-red-500">*</span></label>
-              <input id="nomeFantasia" type="text" formControlName="nomeFantasia" placeholder="Nome comercial da empresa"
+              <label for="rzSocial" class="block text-sm font-medium text-gray-700">Razão Social <span class="text-red-500">*</span></label>
+              <input id="rzSocial" type="text" formControlName="rzSocial" placeholder="Razão Social"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
                 [ngClass]="{'border-red-500': isInvalid('nomeFantasia'), 'border-gray-300': !isInvalid('nomeFantasia')}"
               >
@@ -118,69 +118,43 @@
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
               <div class="md:col-span-2"></div>
-              <br>
+          </div>
+        </fieldset>
 
-              <div class="md:col-span-2">
-                 <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Contato (Telefone, whatsapp, email) </legend>
+        <fieldset>
+           <div class="md:col-span-2">
+                 <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Contato (Celular, whatsapp, email) </legend>
               </div>
-
-              <div class="md:col-span-2">
-                      <button
-                       (click)="openModal()"
-                        type="button"
-                        name="tipo"
-                      class="w-full flex justify-center py-2  border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-400 "
-                      >
-                        +Contatos
-                      </button>
-
-              </div>
-
+          <div  class="grid  md:grid-cols-4 ">
+            <div>
+                <label for="celular" class="block text-sm font-medium text-gray-700">Celular <span class="text-red-500">*</span></label>
+                <input  id="celular" type="text" mask="(00) 0 0000-0000" formControlName="celular" placeholder="Celular"
+                class="mt-1 py-1 w-40 bg-transparent placeholder:text-slate-500 text-slate-700 text-lg border border-slate-200 rounded-md pr-3 pl-2 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow">
             </div>
-     </fieldset>
+            <div >
+                <label for="zap" class="block  text-sm font-medium text-gray-700">WhatsApp </label>
+                <input
+                  id="zap"
+                  type="checkbox"
+                  formControlName="zap"
+                  [(ngModel)]="isChecked"
+                  type="checkbox"
+                  class="w-8 h-10
+                   hover:bg-gray-300 focus:ring-green-500"
+                />
+            </div>
+            <div >
+              <div>
+               <label for="email" class="mt- block  text-sm font-medium text-gray-700">Email </label>
+               <input id="email" type="text" formControlName="email" placeholder="Email"
+                class="mt-1  py-2 w-100  bg-transparent placeholder:text-slate-500 text-slate-700 text-lg border border-slate-200 rounded-md  pl-2 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow">
+            </div>
 
-
-
-<ng-container >
-
-    <table class="data-table">
-
-        <thead>
-            <tr class="text-gray-500 mb-10">
-                <th >Telefone</th>
-                <th >Celular</th>
-                <th >Whatsapp</th>
-                <th >Email</th>
-            </tr>
-        </thead>
-
-        <tbody  *ngIf="receivedData$ | async as receivedData">
-            <tr>
-                <td >{{ receivedData?.telefone  ? (receivedData.telefone | mask : '(00) 0000-0000') : 'Não Informado'   }}</td>
-                <td>{{ receivedData?.celular ? (receivedData.celular | mask : '(00) 0000-0000') : 'não informado' }}</td>
-                <td >{{ receivedData?.whatsapp ? (receivedData.whatsapp | mask : '(00) 0000-0000') : 'não informado' }}</td>
-                <td>{{ receivedData?.email || 'não informado' }}</td>
-            </tr>
-        </tbody>
-
-    </table>
-
-</ng-container>
-
-<div *ngIf="!(receivedData$ | async)" class="text-gray-500 mb-">
-    <p>Nenhuma informação de contato cadastrada. Abra o formulário adicionar contatos para cadastrar.</p>
+           </div>
 </div>
+        </fieldset>
 
-
-
-
-
-      <hr class="my-4 border-green-200">
-
-
-
-     <fieldset>
-
+       <fieldset>
        <br>
        <div formGroupName="endereco" class="grid grid-cols-1 md:grid-cols-4 gap-1">
           <div class="md:col-span-4">
