--- a/src/app/consultas/consulta-pessoas/listar-pessoas/listar-pessoas.html
+++ b/src/app/consultas/consulta-pessoas/listar-pessoas/listar-pessoas.html
@@ -84,21 +84,75 @@
             <td class="px-6 py-4 text-sm font-medium text-gray-900">{{ pessoa.renda_comprovada | currency:'BRL' }}</td>
             <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.municipio + '/'}}{{  pessoa.estado }}</td>
             <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.updated_at  | date:'dd/MM/yyyy' }}</td>
-            <td class="px-6 py-4 text-sm text-gray-600 relative group cursor-pointer">
-            <span>{{ pessoa.nome_status }}</span>
 
-            <div class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 hidden group-hover:block z-10 w-48 p-2 bg-yellow-100 text-yellow-800 text-xs rounded shadow-lg border border-yellow-200 text-center">
+            <td class="px-6 py-4 text-sm relative group cursor-pointer">
+              <span
+                class="px-3 py-1 font-semibold leading-tight rounded-full"
+                [ngClass]="{
+                  'bg-green-100 text-green-700': pessoa.nome_status === 'Ativo',
+                  'bg-red-100 text-red-700': pessoa.nome_status !== 'Ativo'
+                }">
+                {{ pessoa.nome_status }}
+              </span>
 
-              Este status indica que o cadastro está pendente de aprovação.
+              <div
+                class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 hidden group-hover:block z-50 w-max max-w-xs p-2 rounded shadow-lg border text-xs font-normal text-center transition-all duration-200"
+                [ngClass]="{
+                  'bg-green-100 text-green-800 border-green-200': pessoa.nome_status === 'Ativo',
+                  'bg-red-100 text-red-800 border-red-200': pessoa.nome_status !== 'Ativo'
+                }">
 
-              <div class="absolute top-full left-1/2 transform -translate-x-1/2 border-8 border-transparent border-t-yellow-100"></div>
-            </div>
-          </td>
-
-            <td class="px-6 py-4 text-center text-sm font-medium">
-              <button (click)="editarPessoa(pessoa)" class="text-indigo-600 hover:text-indigo-900 mr-3">Editar</button>
-              <button (click)="confirmarExclusao(pessoa)" class="text-red-600 hover:text-red-900">Excluir</button>
+                @if (pessoa.nome_status === 'Ativo') {
+                  Tudo certo! Cadastro ativo.
+                } @else {
+                  Ação necessária: Verifique o cadastro, existem pedências.
+                }
+                <div
+                  class="absolute top-full left-1/2 transform -translate-x-1/2 border-4 border-transparent"
+                  [ngClass]="{
+                    'border-t-green-100': pessoa.nome_status === 'Ativo',
+                    'border-t-red-100': pessoa.nome_status !== 'Ativo'
+                  }">
+                </div>
+              </div>
             </td>
+
+            <td class="px-6 py-4 text-center whitespace-nowrap">
+              <div class="flex justify-center items-center gap-3">
+
+                <button (click)="editarPessoa(pessoa)" class="group relative p-2 rounded-full text-indigo-600 hover:bg-indigo-50 transition-colors duration-200">
+
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+                  </svg>
+
+                  <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden group-hover:block w-auto whitespace-nowrap z-50">
+                    <div class="bg-indigo-600 text-white text-xs font-semibold px-2 py-1 rounded shadow-lg relative">
+                      Editar registro
+                      <div class="absolute top-full left-1/2 -translate-x-1/2 border-4 border-transparent border-t-indigo-600"></div>
+                    </div>
+                  </div>
+                </button>
+
+                <button (click)="confirmarExclusao(pessoa)" class="group relative p-2 rounded-full text-red-600 hover:bg-red-50 transition-colors duration-200">
+
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                  </svg>
+
+                  <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden group-hover:block w-auto whitespace-nowrap z-50">
+                    <div class="bg-red-600 text-white text-xs font-semibold px-2 py-1 rounded shadow-lg relative">
+                      Excluir Registro
+                      <div class="absolute top-full left-1/2 -translate-x-1/2 border-4 border-transparent border-t-red-600"></div>
+                    </div>
+                  </div>
+                </button>
+
+              </div>
+            </td>
+
+
+
           </tr>
         </tbody>
         <ng-template #noData>
