--- a/src/app/consultas/consulta-pessoas/listar-pessoas/listar-pessoas.html
+++ b/src/app/consultas/consulta-pessoas/listar-pessoas/listar-pessoas.html
@@ -56,29 +56,38 @@
               <button
                 type="button"
                 (click)="prepararResumo(pessoa)"
-                class="text-blue-600 hover:text-blue-800 font-semibold underline underline-offset-4 decoration-blue-200">
+                class="text-blue-600 hover:text-blue-600 font-semibold underline underline-offset-4 decoration-blue-200">
                 {{ pessoa.nome_social }}
               </button>
             </td>
-            <td class="px-6 py-4">
+
+            <td class="px-1 py-1">
               <button
-                  type="button"
-                  (click)="prepararWhats(pessoa)"
-                  class="flex items-center space-x-2 w-fit px-3 py-1 rounded-full bg-green-500/10 hover:bg-green-500/20 text-green-700 border border-green-200/50 backdrop-blur-sm transition-all group"
-                  title="Configurar mensagem WhatsApp"
-                >
-                  <svg class="w-4 h-4 fill-current group-hover:scale-110 transition-transform" viewBox="0 0 24 24">
-                    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
-                  </svg>
-                  <span class="font-medium underline-offset-4 group-hover:underline">
+                type="button"
+                (click)="prepararWhats(pessoa)"
+                class="group relative flex items-center space-x-2 w-fit px-3 py-1 rounded-full bg-green-500/10 hover:bg-green-500/20 text-green-700 border border-green-200/50 backdrop-blur-sm transition-all"
+              >
 
-                    <button type="button" (click)="prepararWhats(pessoa)">
-                      <span>{{ pessoa.nr_contato | telefoneMask }}</span>
-                    </button>
-                  </span>
+                <svg class="w-4 h-4 fill-current group-hover:scale-110 transition-transform" viewBox="0 0 24 24">
+                  <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+                </svg>
 
-             </button>
+                <span class="font-medium underline-offset-4 group-hover:underline">
+                  {{ pessoa.nr_contato | telefoneMask }}
+                </span>
+
+                <div class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 hidden group-hover:block z-50 w-max">
+                  <div class="bg-green-50 text-green-800 border-green-50  text-xs font-medium px-2 py-1.5 ">
+                    Envie mensagem personalizada
+
+                    <div class="absolute top-full left-1/2 transform -translate-x-1/2 border-4 border-transparent border-t-green-50"></div>
+                  </div>
+                </div>
+
+              </button>
             </td>
+
+
             <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.ds_cargo }}</td>
             <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.objetivo_interesse }}</td>
             <td class="px-6 py-4 text-sm font-medium text-gray-900">{{ pessoa.renda_comprovada | currency:'BRL' }}</td>
@@ -98,8 +107,8 @@
               <div
                 class="absolute bottom-full left-1/2 transform -translate-x-1/2 mb-2 hidden group-hover:block z-50 w-max max-w-xs p-2 rounded shadow-lg border text-xs font-normal text-center transition-all duration-200"
                 [ngClass]="{
-                  'bg-green-100 text-green-800 border-green-200': pessoa.nome_status === 'Ativo',
-                  'bg-red-100 text-red-800 border-red-200': pessoa.nome_status !== 'Ativo'
+                  'bg-green-50 text-green-800 border-green-50': pessoa.nome_status === 'Ativo',
+                  'bg-red-50 text-red-800 border-red-50': pessoa.nome_status !== 'Ativo'
                 }">
 
                 @if (pessoa.nome_status === 'Ativo') {
