--- a/src/app/consultas/consulta-pessoas/listar-pessoas/listar-pessoas.html
+++ b/src/app/consultas/consulta-pessoas/listar-pessoas/listar-pessoas.html
@@ -17,20 +17,20 @@
       </a>
       </div>
 
-<div class="w-full max-w-2xl relative">
-  <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-    <svg class="w-5 h-5 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
-    </svg>
-  </span>
+      <div class="w-full max-w-2xl relative">
+        <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+          <svg class="w-5 h-5 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+          </svg>
+        </span>
 
-  <input
-    type="text"
-    [(ngModel)]="searchText"
-    placeholder="Pesquisar por nome, contato, ocupação, renda e status"
-    class="w-full pl-10 pr-4 py-2.5 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-blue-500 focus:bg-white outline-none transition-all text-sm placeholder-gray-400"
-  />
-</div>
+        <input
+          type="text"
+          [(ngModel)]="searchText"
+          placeholder="Pesquisar por nome, contato, perfil, objetivo, renda, local e status"
+          class="w-full pl-10 pr-4 py-2.5 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-blue-500 focus:bg-white outline-none transition-all text-sm placeholder-gray-400"
+        />
+      </div>
 
 
     <div class="overflow-x-auto">
@@ -40,7 +40,7 @@
             <th class="px-6 py-4 font-semibold">Nome Social</th>
             <th class="px-6 py-4 font-semibold">Contato</th>
             <th class="px-6 py-4 font-semibold">Perfil</th>
-            <th class="px-6 py-4 font-semibold">Obejtivo</th>
+            <th class="px-6 py-4 font-semibold">Objetivo</th>
             <th class="px-6 py-4 font-semibold">Renda</th>
             <th class="px-6 py-4 font-semibold">Local</th>
             <th class="px-6 py-4 font-semibold">Atualizado</th>
@@ -91,7 +91,7 @@
             <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.ds_cargo }}</td>
             <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.objetivo_interesse }}</td>
             <td class="px-6 py-4 text-sm font-medium text-gray-900">{{ pessoa.renda_comprovada | currency:'BRL' }}</td>
-            <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.municipio + '/'}}{{  pessoa.estado }}</td>
+            <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.municipio + '-'}}{{  pessoa.estado }}</td>
             <td class="px-6 py-4 text-sm text-gray-600">{{ pessoa.updated_at  | date:'dd/MM/yyyy' }}</td>
 
             <td class="px-6 py-4 text-sm relative group cursor-pointer">
