--- a/src/app/menucadastrar/menucadastrar/menucadastrar.html
+++ b/src/app/menucadastrar/menucadastrar/menucadastrar.html
@@ -4,7 +4,7 @@
 </div>
 <br>
 
-<!-- Using utilities: -->
+<!-- Using utilities:
 <div >
     <nav class="rounded-lg border shadow-lg overflow-hidden p-2 bg-gradient-to-r from-blue-500 to-blue-700 text-white border-slate-200 shadow-slate-950/5 sticky top-0 mx-auto w-full max-w-screen-xl">
         <a  routerLink="pessoa">
@@ -18,4 +18,4 @@
          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">+Locação</button></a>
 
     </nav>
-</div>
+</div>-->
