--- a/src/app/menuconsultar/menuconsultar/menuconsultar.html
+++ b/src/app/menuconsultar/menuconsultar/menuconsultar.html
@@ -4,7 +4,7 @@
 </div>
 <br>
 
-<!-- Using utilities: -->
+<!-- Using utilities:
 <div >
     <nav class="rounded-lg border shadow-lg overflow-hidden p-2 bg-gradient-to-r from-blue-500 to-blue-700 text-white border-slate-200 shadow-slate-950/5 sticky top-0 mx-auto w-full max-w-screen-xl">
       <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Contrato de Locação</button>
@@ -12,8 +12,10 @@
         <a  routerLink="pessoas">
             <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">+Pessoas</button>
         </a>
+       <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">editar</button>
+          <a  routerLink="editarpessoa">
+             <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">+EditarPessoas</button>
+         </a>
        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Resumo</button>
-
-
     </nav>
-</div>
+</div> -->
